030-software/fluxcd/apps/kubeshark/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubeshark-hub
spec:
  ports:
    - name: kubeshark-hub
      port: 80
      targetPort: 8080
  selector:
    app: hub
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: kubeshark-front
spec:
  ports:
    - name: kubeshark-front
      port: 80
      targetPort: 8080
  selector:
    app: front
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '49100'
  name: kubeshark-worker-metrics
spec:
  selector:
    app: worker
  ports:
  - name: metrics
    protocol: TCP
    port: 49100
    targetPort: 49100
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9100'
  name: kubeshark-hub-metrics
spec:
  selector:
    app: hub
  ports:
  - name: metrics
    protocol: TCP
    port: 9100
    targetPort: 9100
